<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Hitched</string>
    <string name="parse_app_id">UliVJPYGezH8Q3RdrprOT26CKAWPyGsBw1Eo1sLG</string>
    <string name="parse_client_key">ypzeMh65WKtuND77hRjN203bC0YRkAPqgb4lTQ47</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_budget">Budget</string>
    <string name="update_budget">Update Budget</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_activity_vendor">VendorActivity</string>
    <string name="budget_label">Budget:</string>
    <string name="used_label">Used:</string>
    <string name="title_label">Title:</string>
    <string name="bu_dialog_btn_label">Update</string>
    <string name="title_activity_checklist">Wedding Tasks</string>
    <string name="title_activity_pictures_web">PicturesWeb</string>
    <string name="title_activity_venue">Venue</string>
    <string name="title_activity_wedding_dress_activity"></string>
    <string name="bu_dialog_delete">Delete</string>
    <string name="bu_itin_add">Add</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="sign_up_button_label">Sign Up</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="signup_error_message">Please make sure you enter a username, password, and email address!</string>
    <string name="signup_error_title">Error!</string>
    <string name="login_error_message">Please make sure you enter a username and password!</string>
    <string name="login_error_title">Error!</string>
    <string name="login_button_label">Login</string>
    <string name="sign_up_text">Sign Up!</string>
    <string name="logout_label">Logout</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_wedding_list">WeddingListActivity</string>
    <string name="title_activity_itinerary">ItineraryActivity</string>
      <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
       AIzaSyDcc4zSsw06cBvcQTfLp9uPs5jQ-te-tV8
    </string>
    <string name="title_activity_edit_venue">EditVenueActivity</string>
    <string name="title_activity_share">ShareActivity</string>
    <string name="groomname">Groom Name</string>
    <string-array name="StateList">
        <item>Alabama</item>
        <item>Alaska</item>
        <item>Arizona</item>
        <item>Arkansas</item>
        <item>California</item>
        <item>Colorado</item>
        <item>Connecticut</item>
        <item>Delaware</item>
        <item>Florida</item>
        <item>Georgia</item>
        <item>Hawaii</item>
        <item>Idaho</item>
        <item>Illinois Indiana</item>
        <item>Iowa</item>
        <item>Kansas</item>
        <item>Kentucky</item>
        <item>Louisiana</item>
        <item>Maine</item>
        <item>Maryland</item>
        <item> Massachusetts</item>
        <item> Michigan</item>
        <item> Minnesota</item>
        <item>Mississippi</item>
        <item> Missouri</item>
        <item> Montana</item>
        <item>Nebraska</item>
        <item>Nevada</item>
        <item> New Hampshire</item>
        <item> New Jersey</item>
        <item> New Mexico</item>
        <item> New York</item>
        <item> North Carolina</item>
        <item>  North Dakota</item>
        <item>  Ohio</item>
        <item> Oklahoma</item>
        <item>  Oregon</item>
        <item>  Pennsylvania Rhode Island</item>
        <item>  South Carolina</item>
        <item>  South Dakota</item>
        <item>  Tennessee</item>
        <item>  Texas</item>
        <item>  Utah</item>
        <item>  Vermont</item>
        <item>  Virginia</item>
        <item>  Washington</item>
        <item>  West Virginia</item>
        <item>  Wisconsin</item>
        <item>  Wyoming</item>


    </string-array>

    <string name="hitched">HITCHED</string>
    <string name="title_activity_forgot_password">ForgotPassword</string>
    <string name="title_activity_venue_search">VenueSearch</string>
    <string name="title_activity_venue_search_result">VenueSearchResult</string>
    <string name="title_activity_venue_fragment">VenueFragment</string>
    <string name="title_activity_wedding_dress_list">WeddingDressList</string>
    <string name="title_activity_dress_search_result">DressSearchResult</string>
    <string name="title_activity_vows">VowsActivity</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="update">UPDATE MY ACCOUNT</string>
    <string name="menu">Menu</string>
    <string name="title_activity_day_of">DayOfActivity</string>
    <string name="title_activity_venue_detail">VenueDetail</string>

    <string name="title_activity_floor_plan">FloorPlanActivity</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_dress_detail">DressDetail</string>
    <string name="title_activity_venue_pictures">VenuePictures</string>
    <string name="title_activity_dress_pictures">DressPictures</string>


    <string name="xlistview_header_hint_normal">pull-to-refresh</string>
    <string name="xlistview_header_hint_ready">Loosen the refresh data</string>
    <string name="xlistview_header_hint_loading">Loding...</string>
    <string name="xlistview_header_last_time">The last update time：</string>
    <string name="xlistview_footer_hint_normal">See More</string>
    <string name="xlistview_footer_hint_ready">Loosen the load more</string>
</resources>
