<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.uco.weddingcrashers.hitched.BudgetUpdateFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">



    <!-- Label for Budget Edit Text -->
    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/budget_label"/>

    <!-- EditText for Budget Value -->
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/budgetValueEdit"
        android:inputType="numberDecimal"/>

    <!-- Label for Budget Used Edit Text -->
    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/used_label"/>

    <!-- EditText for Budget Used -->
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/budgetUsedEdit"
        android:inputType="numberDecimal"/>

    </LinearLayout>



        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bu_dialog_btn_label"
            android:id="@+id/updateBudgetBtnDialog"/>
    </LinearLayout>


</FrameLayout>
