<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity"
    android:background="#F6ECEB">



    <EditText
        android:id="@+id/usernameField"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/username_hint"
        android:layout_below="@+id/toolbar"
        android:layout_alignStart="@+id/groomname"
        android:layout_marginTop="19dp">

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/passwordField"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/usernameField"
        android:layout_below="@+id/usernameField"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password_hint"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="false" />

    <EditText
        android:id="@+id/emailField"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/passwordField"
        android:layout_below="@+id/passwordField"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email_hint"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="false" />

    <Button
        android:id="@+id/signupButton"
        android:layout_width="300sp"
        android:layout_height="50sp"
        android:text="Sign Up!"
        android:background="#DE84B5"
        android:textColor="#F6ECEB"
        android:layout_below="@+id/datePicker"
        android:layout_alignStart="@+id/message"
        android:layout_marginTop="20dp" />

    <EditText
        android:id="@+id/bridename"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Bride Name"
        android:layout_below="@+id/emailField"
        android:layout_alignStart="@+id/emailField"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/groomname"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/groomname"
        android:layout_below="@+id/bridename"
        android:layout_centerHorizontal="true" />



    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Yes, I have a wedding Date"
        android:id="@+id/checkBox"
        android:checked="false"
        android:layout_below="@+id/groomname"
        android:layout_alignStart="@+id/groomname" />

    <DatePicker
        android:layout_width="wrap_content"
        android:layout_height="150sp"
        android:id="@+id/datePicker"
        style="@android:style/Widget.DatePicker"
        android:calendarTextColor="#88CDE6"
        android:layout_below="@+id/checkBox"
        android:layout_alignStart="@+id/datePicker"
        android:layout_centerHorizontal="true"
        android:visibility="invisible" />

    <TextView
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:text="message"
        android:id="@+id/message"
        android:layout_above="@+id/signupButton"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textColor="#f90606"
        android:textSize="14sp"
        android:visibility="invisible" />

</RelativeLayout>